syntax = "proto3";

package jobApply;

import "apply-to-job-post.proto";
import "list-job-application-by-user-and-post.proto";
import "cancel-job-application.proto";
import "list-job-application-by-post-for-publisher.proto";
import "count-job-application-by-post.proto";
import "decide-job-application.proto";
import "list-my-job-application.proto";
import "get-my-job-application.proto";
import "reject-pending-job-application.proto";

service JobApplyService {
  rpc ApplyToJobPost(ApplyToJobPostRequest) returns (ApplyToJobPostResponse);

  rpc ListJobApplicationByUserAndPost(ListJobApplicationByUserAndPostRequest)
      returns (ListJobApplicationByUserAndPostResponse);

  rpc CancelJobApplication(CancelJobApplicationRequest)
      returns (CancelJobApplicationResponse);

  rpc ListJobApplicationsByPostForPublisher(
      listJobApplicationsByPostForPublisherRequest)
      returns (listJobApplicationsByPostForPublisherResponse);

  rpc CountJobApplicationByPost(CountJobApplicationByPostRequest)
      returns (CountJobApplicationByPostResponse);

  rpc DecideJobApplication(DecideJobApplicationRequest)
      returns (DecideJobApplicationResponse);

  rpc ListMyJobApplication(ListMyJobApplicationRequest)
      returns (ListMyJobApplicationResponse);

  rpc GetMyJobApplication(GetMyJobApplicationRequest)
      returns (GetMyJobApplicationResponse);

  rpc RejectPendingJobApplication(RejectPendingJobApplicationRequest)
      returns (RejectPendingJobApplicationResponse);
}
